[tool.poetry]
name = "superagent-py"
version = "v0.0.32"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "superagent", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.2"
httpx = "0.23.3"

[tool.poetry.dev-dependencies]
mypy = "0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
