[tool.poetry]
name = "superagent-py"
version = "v0.0.38"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "superagent", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "0.23.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
mypy = "0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
